crates/gh-report/src/report/snapshots/gh_report__report__html__tests__dashboard_admin.snap
---
source: crates/gh-report/src/report/html/tests.rs
assertion_line: 318
expression: "&pages[\"admin.html\"]"
---
<!DOCTYPE html>
<html lang="en">

<head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>TestOrg Admin Diagnostics</title>
    <link rel="stylesheet" href="style.css">
    <script src="ws.js" defer></script>
    <link rel="modulepreload" href="gh-report-web-client.js">
    <link rel="preload" href="gh-report-web-client_bg.wasm" as="fetch" crossorigin>
    <script type="module" src="sort-init.js"></script>
    
</head>

<body>

    <nav class="top-nav">
    <a href="index.html">Dashboard</a>
    
    <a href="orphans.html">Orphans (0)</a>
    <a href="report.html" class="nav-right">Report</a>
    <a href="deleted.html">Deleted (0)</a>
    <a href="admin.html" class="admin-link">Admin (8)</a>
</nav>

    <h1>Admin Diagnostics</h1>

    <ul class="breadcrumb">
        <li><a href="index.html">Dashboard</a></li>
        <li>Admin Diagnostics</li>
    </ul>

    <p class="meta">Read-only technical diagnostics for <code>TestOrg</code>. Technical issues total: <strong>8</strong>.</p>

    <h2>Red Flags (6)</h2>

    
    
    <p class="red-flags-summary">[Critical 0 · High 4 · Medium 2]</p>
    
    <div class="red-flag-card severity-high">
        <p class="red-flag-header">
            <span class="status-dot status-warn"><span class="sr-only">High</span></span>
            <span class="red-flag-category">Credential</span>
            <strong>Org-level secret scanning alerts capability unavailable</strong>
        </p>
        <p>Organization-wide secret-scanning alert observability is degraded; alert-based coverage metrics may undercount.</p>
        <p>Fix: Grant the missing scope or permission listed under Capability probes, or accept the degraded coverage for this credential tier.</p>
        
        <p class="meta">Affected: organization-wide</p>
        
    </div>
    
    <div class="red-flag-card severity-high">
        <p class="red-flag-header">
            <span class="status-dot status-warn"><span class="sr-only">High</span></span>
            <span class="red-flag-category">Credential</span>
            <strong>Private/internal branch-protection reads capability unavailable</strong>
        </p>
        <p>Private and internal repositories cannot be distinguished from not-found responses; branch protection scores Unknown for them.</p>
        <p>Fix: Grant the missing scope or permission listed under Capability probes, or accept the degraded coverage for this credential tier.</p>
        
        <p class="meta">Affected: organization-wide</p>
        
    </div>
    
    <div class="red-flag-card severity-high">
        <p class="red-flag-header">
            <span class="status-dot status-warn"><span class="sr-only">High</span></span>
            <span class="red-flag-category">Integrity</span>
            <strong>Collection requests were rate-limited</strong>
        </p>
        <p>One or more checks were rate-limited by the GitHub API; the affected repositories&#39; results are incomplete for this run.</p>
        <p>Fix: Re-run collection after the rate-limit window resets, or reduce the concurrent worker count.</p>
        
        <p class="meta">Affected: 4</p>
        
    </div>
    
    <div class="red-flag-card severity-high">
        <p class="red-flag-header">
            <span class="status-dot status-warn"><span class="sr-only">High</span></span>
            <span class="red-flag-category">Integrity</span>
            <strong>Collection run is stale</strong>
        </p>
        <p>The last completed collection run is more than twice the scheduled collection interval old; the daemon may be stuck and this report may not reflect current state.</p>
        <p>Fix: Check daemon liveness/readiness and Cloud Run min-instances, then restart the collection process if it is stuck.</p>
        
        <p class="meta">Affected: organization-wide</p>
        
    </div>
    
    <div class="red-flag-card severity-medium">
        <p class="red-flag-header">
            <span class="status-dot status-unknown"><span class="sr-only">Medium</span></span>
            <span class="red-flag-category">Credential</span>
            <strong>Branch protection reads suspected permission-denied</strong>
        </p>
        <p>One or more branch-protection checks returned an ambiguous not-found response consistent with insufficient read access on a private repository.</p>
        <p>Fix: Verify the token has Repository administration: read (or classic repo scope) and retry collection.</p>
        
        <p class="meta">Affected: 1</p>
        
    </div>
    
    <div class="red-flag-card severity-medium">
        <p class="red-flag-header">
            <span class="status-dot status-unknown"><span class="sr-only">Medium</span></span>
            <span class="red-flag-category">Credential</span>
            <strong>Branch protection reads denied by permissions</strong>
        </p>
        <p>One or more repositories returned an explicit permission-denied response for branch protection; branch-protection posture for those repos is not observable.</p>
        <p>Fix: Grant the token Repository administration: read (or classic repo scope) and retry collection.</p>
        
        <p class="meta">Affected: 3</p>
        
    </div>
    
    

    <h2>Collection Health</h2>

    
    
    <section class="diagnostics-section">
        <h3>Branch Protection</h3>
        <table class="data-table" data-sortable>
            <thead>
                <tr>
                    <th scope="col" data-sort-type="text">Reason <span class="tooltip-trigger tooltip-trigger-header" tabindex="0" data-tooltip="Collection-failure taxonomy reason for this check kind — e.g. rate limited, permission denied, transient error.">ⓘ<span class="sr-only">Collection-failure taxonomy reason for this check kind — e.g. rate limited, permission denied, transient error.</span></span></th>
                    <th scope="col" class="text-right" data-sort-type="numeric">Count <span class="tooltip-trigger tooltip-trigger-header" tabindex="0" data-tooltip="Number of repositories or checks that failed for this reason during this run.">ⓘ<span class="sr-only">Number of repositories or checks that failed for this reason during this run.</span></span></th>
                </tr>
            </thead>
            <tbody>
                
                <tr>
                    <td>permission_denied</td>
                    <td class="text-right">3</td>
                </tr>
                
                <tr>
                    <td>permission_suspected</td>
                    <td class="text-right">1</td>
                </tr>
                
                <tr>
                    <td><strong>Subtotal</strong></td>
                    <td class="text-right"><strong>4</strong></td>
                </tr>
            </tbody>
        </table>
    </section>
    
    <section class="diagnostics-section">
        <h3>Rulesets</h3>
        <table class="data-table" data-sortable>
            <thead>
                <tr>
                    <th scope="col" data-sort-type="text">Reason <span class="tooltip-trigger tooltip-trigger-header" tabindex="0" data-tooltip="Collection-failure taxonomy reason for this check kind — e.g. rate limited, permission denied, transient error.">ⓘ<span class="sr-only">Collection-failure taxonomy reason for this check kind — e.g. rate limited, permission denied, transient error.</span></span></th>
                    <th scope="col" class="text-right" data-sort-type="numeric">Count <span class="tooltip-trigger tooltip-trigger-header" tabindex="0" data-tooltip="Number of repositories or checks that failed for this reason during this run.">ⓘ<span class="sr-only">Number of repositories or checks that failed for this reason during this run.</span></span></th>
                </tr>
            </thead>
            <tbody>
                
                <tr>
                    <td>rate_limited</td>
                    <td class="text-right">4</td>
                </tr>
                
                <tr>
                    <td><strong>Subtotal</strong></td>
                    <td class="text-right"><strong>4</strong></td>
                </tr>
            </tbody>
        </table>
    </section>
    
    

    <h2>Active Credential Limitations</h2>

    <section class="diagnostics-section">
        <p>running with github_app/Limited</p>
        
        <p>degraded:</p>
        <ul>
            
            <li>org_secret_scanning_alerts</li>
            
            <li>private_branch_protection_read</li>
            
        </ul>
        
    </section>

    
</body>

</html>
