crates/gh-report/src/report/snapshots/gh_report__report__html__tests__dashboard_index_badge.snap
---
source: crates/gh-report/src/report/html/tests.rs
expression: "normalize_build_footer(&pages[\"index.html\"])"
---
<!DOCTYPE html>
<html lang="en">

<head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>TestOrg Security Dashboard</title>
    <link rel="stylesheet" href="style.css">
    <link rel="icon" type="image/svg+xml" href="favicon.svg">
    <script src="ws.js" defer></script>
    
    
</head>

<body>

    <nav class="top-nav">
    <a href=".">Dashboard</a>
    
    <a href="orphans.html">Orphans (0)</a>
    <a href="report.html" class="nav-right">Report</a>
    <a href="deleted.html">Deleted (0)</a>
    <a href="admin.html" class="admin-link">Admin (8)</a>
</nav>

    <div class="page-header">
        <p class="meta"><strong>Date:</strong> 2026-04-09 12:00 UTC · <strong>Scope:</strong> 5 total · 5 non-archived · 0 archived repositories in <code>TestOrg</code></p>
    </div>

    <div class="scorecard">
        <div class="card health-score-card tier-warn" title="Geometric mean of measured control rates across seven controls — Security Policy, Secret Scanning, Dependabot, Branch Protection, CODEOWNERS, Lifecycle: Retirement, Alert-Free Status. Unmeasured controls are excluded from each rate's denominator. Rewards balanced improvement across all controls.">
            <p class="card-label">Overall Organization Governance Score</p>
            <p class="card-value">69.8%</p>
            <div class="progress-bar">
                <div class="progress-fill tier-warn w-70"></div>
            </div>
        </div>
        <div class="scorecard-group">
            <a href="secret_scanning.html" class="card tier-pass" title="Percentage of non-archived repos with GitHub secret scanning enabled to detect leaked credentials. Click through for the repositories behind this percentage.">
                <p class="card-label">Secret Scanning <span class="tooltip-trigger" tabindex="0" data-tooltip="Enable it under Settings → Security → Advanced Security: click Enable → Enable Secret Protection next to Secret Protection (turns on scanning and push protection together). Counts all non-archived repositories, mirroring the organisation-wide Secret Scanning figure.">ⓘ<span class="sr-only">Enable it under Settings → Security → Advanced Security: click Enable → Enable Secret Protection next to Secret Protection (turns on scanning and push protection together). Counts all non-archived repositories, mirroring the organisation-wide Secret Scanning figure.</span></span></p>
                <p class="card-value">80.0% (4/5)</p>
                <p class="card-detail">1 open org alerts · success</p>
                <div class="progress-bar">
                    <div
                        class="progress-fill tier-pass w-80">
                    </div>
                </div>
            </a>
            <a href="alert_free.html" class="card tier-warn card-bright-red" title="Percentage of observable repositories with no open secret scanning alerts (secret scanning enabled and alerts observable). Higher is better. One of seven controls behind the Org Governance score. N/A when no repositories are observable.">
                <p class="card-label">Alert-Free Status</p>
                <p class="card-value">75.0% (3/4)</p>
                <div class="progress-bar">
                    <div class="progress-fill tier-warn w-75"></div>
                </div>
                <p class="card-detail">1 unmeasured</p>
            </a>
            <a href="dependabot_status.html" class="card tier-warn" title="Percentage of repos with Dependabot security updates enabled (auto-PRs for vulnerable dependencies). Click through for the repositories behind this percentage.">
                <p class="card-label">Dependabot Status <span class="tooltip-trigger" tabindex="0" data-tooltip="Enable it under Settings → Security → Advanced Security: click Enable next to Dependabot alerts (this also governs Dependabot security updates), or apply it org-wide via a security configuration.">ⓘ<span class="sr-only">Enable it under Settings → Security → Advanced Security: click Enable next to Dependabot alerts (this also governs Dependabot security updates), or apply it org-wide via a security configuration.</span></span></p>
                <p class="card-value">60.0% (3/5)</p>
                <div class="progress-bar">
                    <div class="progress-fill tier-warn w-60"></div>
                </div>
                <p class="card-detail">1 unmeasured (1 unknown)</p>
            </a>
            <a href="branch_protection.html" class="card tier-warn" title="Percentage of observable repos at branch-protection BPR2 (IntegrityOnly) or higher. Unreadable or permission-suspected repos are excluded from this percentage (see the unmeasured breakdown below), not classified as below-bar. Click through for the BPR0..BPR5 regime drill-down.">
                <p class="card-label">Branch Protection <span class="tooltip-trigger" tabindex="0" data-tooltip="Add a branch protection rule (Settings → Branches) or ruleset (Settings → Rules → Rulesets) on the default branch: require PR review, disallow force-push and deletion, and disable bypass so admins can&#39;t skip it.">ⓘ<span class="sr-only">Add a branch protection rule (Settings → Branches) or ruleset (Settings → Rules → Rulesets) on the default branch: require PR review, disallow force-push and deletion, and disable bypass so admins can&#39;t skip it.</span></span></p>
                <p class="card-value">60.0% (3/5)</p>
                <p class="card-detail">BPR1 0 · 1 unmeasured (1 unknown)</p>
                <div class="progress-bar">
                    <div
                        class="progress-fill tier-warn w-60">
                    </div>
                </div>
            </a>
            <a href="codeowners.html" class="card tier-pass" title="Percentage of repos with a CODEOWNERS file identifying responsible teams or individuals. Click through for the repositories behind this percentage.">
                <p class="card-label">CODEOWNERS <span class="tooltip-trigger" tabindex="0" data-tooltip="Add .github/CODEOWNERS naming a GitHub team (not an individual) with write access to the repo, e.g. `*   @your-org/team-slug` — teams survive membership changes.">ⓘ<span class="sr-only">Add .github/CODEOWNERS naming a GitHub team (not an individual) with write access to the repo, e.g. `*   @your-org/team-slug` — teams survive membership changes.</span></span></p>
                <p class="card-value">80.0% (4/5)</p>
                <div class="progress-bar">
                    <div class="progress-fill tier-pass w-80"></div>
                </div>
                <p class="card-detail">1 unmeasured (1 unknown)</p>
            </a>
        </div>
        <div class="scorecard-group">
            <a href="security_policy.html" class="card tier-warn" title="Percentage of public repos with a SECURITY.md or GitHub security-policy setting enabled. Click through for the repositories behind this percentage.">
                <p class="card-label">Security Policy <span class="tooltip-trigger" tabindex="0" data-tooltip="Add a SECURITY.md file to the repo root, .github/, or docs/ — or use the Security tab&#39;s Reporting → Security policy → Start setup for a guided pull request.">ⓘ<span class="sr-only">Add a SECURITY.md file to the repo root, .github/, or docs/ — or use the Security tab&#39;s Reporting → Security policy → Start setup for a guided pull request.</span></span></p>
                <p class="card-value">66.7% (2/3)</p>
                <div class="progress-bar">
                    <div class="progress-fill tier-warn w-65"></div>
                </div>
            </a>
            <a href="lifecycle_retirement.html" class="card tier-na" title="Archived / (archived + stale-active) — fraction of stale-lifecycle repos that have been archived. Stale = no update in 2+ years. Higher is better. One of seven controls behind the Org Governance score. It asks whether dead work has been retired, the later stage of the repository lifecycle arc. One of two Lifecycle controls, and distinct from the per-owner Lifecycle: Freshness, which asks whether work is still happening and divides by all of an owner&#39;s repos rather than by stale-lifecycle repos only.">
                <p class="card-label">Lifecycle: Retirement</p>
                <p class="card-value">N/A (0/0)</p>
                <p class="card-detail">0 archived · 0 stale</p>
                <div class="progress-bar">
                    <div class="progress-fill tier-na w-0"></div>
                </div>
            </a>
        </div>
    </div>

    

    <footer class="build-footer">
        <p class="meta">gh-report v[BUILD] · build [SHA]</p>
    </footer>

</body>

</html>
